# vipdroid

./: .gitmodules  local.properties  settings.gradle
app/: README.md  build.gradle
app/src/androidTest/java/com/example/vipdroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vipdroid.cpp
app/src/main/cpp/src/: CMakeLists.txt  vipdroid.cpp  vipdroid.h
app/src/main/java/com/example/vipdroid/: ImageMaster.kt  ImageOptionThreeArgs.kt  MainActivity.kt  ResolveFunctionResult.kt
app/src/main/java/com/example/vipdroid/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
app/src/main/java/com/example/vipdroid/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/com/example/vipdroid/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_image_option_three_args.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vipdroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libvips_android_scripts/: build_android.sh  ndk_path_only.sh  ndk_paths.sh
libvips_android_scripts/libs/: .gitignore
libvips_android_scripts/scripts/: autoconf_generic_build_android.sh  glib_build_android.sh  libjpeg_build_android.sh  libpng_build_android.sh  libvips_build_android.sh
